# fastapi_assignment

date_fruit_prediction/: .env  pyproject.toml
date_fruit_prediction/dates_fruits_class_api/: fastapi_application.py
date_fruit_prediction/dates_fruits_class_api/config/v1/: __init__.py  database_config.py
date_fruit_prediction/dates_fruits_class_api/data_files/: model_random_forest.pkl  pipeline.pkl
date_fruit_prediction/dates_fruits_class_api/models/: mongo_model.py  pydantic_model.py
date_fruit_prediction/dates_fruits_class_api/utils/: files_loader.py  preprocess_data.py
date_fruit_prediction/dockerfiles/: Dockerfile  docker-compose.yml
date_fruit_prediction/notebooks/: model.ipynb
