[tool.poetry]
name = "dates-fruits-class-api"
version = "0.1.0"
description = ""
authors = ["sahilgarg2814 <sahil.garg@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
uvicorn = "^0.29.0"
mongoengine = "^0.28.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.2"
scikit-learn = "1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
